Added connection string and mysql package

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost;Database=store;User=root;Password=admin;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
