Added basic authentication stuff

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt" : {
+    "Key" : "16FF1FE962ECD7CE7EB11F9D9131B",
+    "Issuer" : "http://localhost"
+  },
   "AllowedHosts": "*"
 }
