- Fixed JWT audience - Configured swagger to support JWT authentication

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -10,7 +10,8 @@
   },
   "Jwt" : {
     "Key" : "this-is-my-token-that-i-will-not-user-in-prod",
-    "Issuer" : "http://localhost"
+    "Issuer" : "http://localhost",
+    "Audience": "http://localhost"
   },
   "AllowedHosts": "*"
 }
