--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,6 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url" : "http://0.0.0.0:5145"
+      }
+    }
+  },
   "Jwt" : {
     "Key" : "this-is-my-token-that-i-will-not-user-in-prod",
     "Issuer" : "http://localhost",
